--- a/app/data/icons/README
+++ b/app/data/icons/README
@@ -2,3 +2,25 @@ Icons adapted from the Open Iconic set of icons, which are licensed under MIT.
 
 https://useiconic.com/
 https://github.com/iconic/open-iconic
+
+Other Icons:
+
+Person.png
+    Icon by King (https://thenounproject.com/asyifawildiani/)
+    Creative Commons 3.0 Attribution License
+    No changes made except for removing the name from the downloaded PNG
+
+Globe.png
+    Icon by Kosong Tujuh (https://thenounproject.com/dugiqq/)
+    Creative Commons 3.0 Attribution License
+    No changes made except for removing the name from the downloaded PNG
+
+star.png
+    Icon by Mohammad Nasrullahi (https://thenounproject.com/muhammadnasrullahi4444/)
+    Creative Commons 3.0 Attribution License
+    No changes made except for removing the name from the downloaded PNG
+
+open-star.png
+    Icon by Mohammad Nasrullahi (https://thenounproject.com/muhammadnasrullahi4444/)
+    Creative Commons 3.0 Attribution License
+    No changes made except for removing the name from the downloaded PNG
